--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="col-lg-4 ml-auto">
                            <h4 class="section-heading text-white">Resume</h4>
                            <hr class="light my-4">
-                           <a href="docs/Montgomery Lisa CV.pdf" download><button class="btn btn-dark btn-xl"><i class="fa fa-download fa-2x" aria-hidden="true"></i></button></a>
+                           <a href="docs/MontgomeryLisa_CV.pdf" download><button class="btn btn-dark btn-xl"><i class="fa fa-download fa-2x" aria-hidden="true"></i></button></a>
                         </div>
                      </div>
                   </div>
