--- a/index.html
+++ b/index.html
@@ -488,21 +488,19 @@
             <div class="row">
                <div class="col-lg-8 mx-auto text-center">
                   <h2 class="section-heading">Let's Get In Touch!</h2>
-                  <p>
-                     I'm looking for new opportunities to enhance my career in the field of software development. My inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!
-                     </p>
+                 
                   <hr class="my-4">
                </div>
             </div>
             <div class="row">
                <div class="col-lg-4 ml-auto text-center">
                   <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-                  <p>+13129736196</p>
+                  <p>+17738051672</p>
                </div>
                <div class="col-lg-4 mr-auto text-center">
                   <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
                   <p>
-                     <a class="text-dark" href="mailto:tanmaypatil472@gmail.com">tanmaypatil472@gmail.com</a>
+                     <a class="text-dark" href="mailto:Lisa.Lanell@yahoo.com">Lisa.Lanell@yahoo.com</a>
                   </p>
                </div>
             </div>
