--- a/index.html
+++ b/index.html
@@ -199,36 +199,19 @@
             <hr style="max-width:1000px;border-width:1px">
             <div class="row">
                <div class="col-lg-1 mx-auto text-left">
-                  <h1><span>Education</span></h1>
+                  <h1><span>Education and Training</span></h1>
                   <hr class="dark my-3">
                </div>
                <div class="col-lg-6 mx-auto">
                   <div class="row">
                      <div class="col-lg-12 mx-auto">
-                        <h3>Illinois Institute of Technology, Chicago</h3>
-                        <p>Chicago,Illinois, USA(<em>August 2019 - Present</em>)</p>
-                        <p class="text-muted mb-0">Master of Science •Information Technology Management<br>
-                            Specialization in <i>Management Information Systems</i>.
+                        <h3>Illinois Institute of Technology</h3>
+                        <p>Chicago(<em> 2010</em>)</p>
+                        <p class="text-muted mb-0">Master of Public Administration<br>
                         </p>
-						<br>
-						<p>Completed Courses</p>
-						<div class="container">
-							<small>Advance Topics in Data Management</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD-523)</small><br>
-							<small>Client Server Technologies and Application</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD - 521)</small><br>
-							<small>Data Analytics</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD - 527)</small><br>
-							<small>Data Warehosuing</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD - 526)</small><br>
-							<small>Information Technology Management Frameworks</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMM-574)</small><br>
-							<small>Object-Oriented Application Development</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD-510 )</small><br>						
-						</div>
-						<br>
-						<p>Current Courses</p>
-						<div class="container">
-							<small>Vendor Management and Service Level Agreements</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMM-537)</small><br>
-							<small> Service-Oriented Architectures</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMD-566)</small><br>
-							<small>IT Auditing</small><small class="text-muted"><i class="glyphicon glyphicon-time"></i>(Course number ITMM-586)</small>
-						</div>
-                     </div>
+                    </div>
                   </div>
+                  
                   <!-- item end -->
                   <div class="row" style="padding-top:30px">
                      <div class="col-lg-12 mx-auto">
