--- a/index.html
+++ b/index.html
@@ -215,14 +215,22 @@
                   <!-- item end -->
                   <div class="row" style="padding-top:30px">
                      <div class="col-lg-12 mx-auto">
-                        <h3>Mumbai University</h3>
-                        <p>Mumbai ,Maharashtra,India(<em>May 2014</em>)</p>
+                        <h3>DePaul University</h3>
+                        <p>Chicago(<em> 2000 </em>)</p>
 						<p class="text-muted mb-0">
-                           Bachelor of Engineering in Computer Engineering
+                     Bachelor of Arts in Education Administration
                         </p>
                      </div>
                   </div>
                   <!-- item end -->	
+                  <div class="row">
+                     <div class="col-lg-12 mx-auto">
+                        <h3>Foursight</h3>
+                        <p>Chicago(<em> 2018</em>)</p>
+                        <p class="text-muted mb-0">Foursight Certified Trainer<br>
+                        </p>
+                    </div>
+                  </div>
                </div>
                <!-- item end -->
             </div>
