--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                            <h4 class="section-heading text-white">Contact Details</h4>
                            <hr class="dark my-3">
                            <p class="text-faded mb-4">
-                           <a class="text-faded mb-4" href="mailto:Lisa.Lanell@yahoo.com">Lisa.Lanell@yahoo.com</a>
+                           <a class="text-faded mb-4" href="mailto:montgomeryl@iit.edu">montgomeryl@iit.edu</a>
 						   <a class="text-faded mb-4" href="mailto:Lisa.Lanell@yahoo.com ">Lisa.Lanell@yahoo.com</a>
 						   +17738051672</p>
                         </div>
@@ -223,6 +223,7 @@
                      </div>
                   </div>
                   <!-- item end -->	
+                  <br>
                   <div class="row">
                      <div class="col-lg-12 mx-auto">
                         <h3>Foursight</h3>
